# madetech-rag-assistant

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md
backend/: .env.example  pyproject.toml
backend/data/handbook/benefits/: Unum_Help_at_hand.md  cycle_to_work_scheme.md  flexible_working.md  getting_together.md  help_to_buy_tech.md  hybrid_working.md  income_protection_and_life_insurance.md  lunchers.md  pension_scheme.md  private_medical_insurance.md  season_ticket_loan.md  taking_holiday.md  work_ready.md
backend/data/handbook/company/: about.md  welcome_pack.md
backend/data/handbook/guides/: Relocation.md  buddy_guidance.md  chalet_time_policy.md  contributing_to_the_handbook.md  exit_interviews.md  jury_service.md  onboarding.md
backend/data/handbook/roles/: Associate Business Analyst.md  README.md  associate_delivery_manager.md  associate_designer.md  associate_product_manager.md  associate_software_engineer.md  delivery_director.md  delivery_support_analyst.md  finance_business_partner.md  head_of_delivery_management.md  head_of_managed_services.md  head_of_service_line.md  lead_bid_manager.md  lead_business_analyst.md  lead_content_designer.md  lead_data_engineer.md  lead_delivery_manager.md  lead_designer.md  lead_product_manager.md  lead_security_engineer.md  lead_software_engineer.md  lead_user_researcher.md  mid_application_support_engineer.md  mid_data_engineer.md  (+28 more)
backend/data/vector_db/: chroma.sqlite3
backend/scripts/: ingest.py
backend/src/: __init__.py  app.py  groq_service.py  handbook_loader.py  models.py  rag_service.py
(+141 files in other folders)
